# phi-adapter-onkyo

./: .gitignore  CMakeLists.txt  README.md  onkyo-config.json
debian/: changelog  control  copyright  rules
src/: onkyoadapter.cpp  onkyoadapter.h  onkyoadapterfactory.cpp  onkyoadapterfactory.h  onkyoipcmain.cpp
